--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -12,9 +12,75 @@
         android:layout_height="wrap_content"
         android:id="@+id/btnScan"
         android:text="@string/scan"/>
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/scan_text"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_weight = "1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:textSize="20dp"
+                android:gravity="left"
+                android:text="ID:"/>
+            <TextView
+                android:id="@+id/tvId"
+                android:layout_weight="2"
+                android:layout_width="0dp"
+                android:paddingLeft="10dp"
+                android:textSize="20dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_weight = "1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:textSize="20dp"
+                android:text="Username:"/>
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_weight="2"
+                android:layout_width="0dp"
+                android:paddingLeft="10dp"
+                android:textSize="20dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_weight = "1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:textSize="20dp"
+                android:text="Tel:"/>
+            <TextView
+                android:id="@+id/tvTel"
+                android:layout_weight="2"
+                android:layout_width="0dp"
+                android:paddingLeft="10dp"
+                android:textSize="20dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
